[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "REPEAT"
version = "0.1.0"
description = "Description of your REPEAT project."
readme = "README.md"
requires-python = ")->=3.8"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.6",
  "mypy>=1.8",
  "build>=1.2",
]